	* configs/lincoln60:  Add a configuration to support the Micromint Lincoln60
	  board.
	* configs/ekk-lm3s3b96:  Add a configuration to support the TI/Stellaris
	  EKK-LM3S3B96 development board.  Contributed by Jose Pablo Rojas V.
	* arch/arm/src/lpc43xx/chip:  Created header files for *all* (really)
	  lpc43xx registers and all bit-fields.
	* configs/lpc4330-xplorer:  Added a configuration for the NXP LPC43XX
	  Xplorer board.  This is just to facilitate testing of the LPC43xx
	  port but will, with any luck, become proper board support for that
	  board.
	* arch/arm/src/lm3s/lm3s_syscontrol.c:  Fix an optimization related problem
	  by adding a volatile qualifier to a timing loop.  Oddly, the consequence
	  of the bug is that when debug was off, the LM3S platform too a long time
	  to boot.  It now boots rapidly whether debug is on or off.
	* arch/*/include/limits.h:  Change all values in all limits.h for all
	  architectures to signed decimal; the hex values were not sign extending
	  appropriate in most uses (reported by Lorenz Meier).
	* arch/arm/src/stm32/chip/stm32f103/7vc_pinmap:  Fix typographical error in
	  two pinmap definition files.
	* lib/net/lib_inetntoa.c:  Fix typographical error that cause compilation
	  failure on platforms that do not support passing of structures as
	  parameters.
	* arch/arm/*/lpc43xx and configs/lpc4330-xplorer and code complete and
	  ready for testing.  Hopefully, verified LPC43xx support will appear
	  in NuttX-6.20.
	* include/nuttx/stdarg.h:  If CONFIG_ARCH_STDARG_H=y is defined, the top-level
	  makefile will copy the generic (GCC-only) stdarg.h header file from
	  include/nuttx/stdarg.h to include/stdarg.h.  So for the architectures
	  that cannot use their GCC toolchain's stdarg.h file, they can use this
	  alternative by defining CONFIG_ARCH_STDARG_H=y.  If CONFIG_ARCH_STDARG_H,
	  is not defined, then the redirecting stdarg.h header file will stay
	  out-of-the-way in include/nuttx/.
